# Zireael

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_STANDARDS.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  MASTERDOC.MD  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  SUPPORT.md  mkdocs.yml  requirements-docs.txt
.claude/: settings.json
.claude/zireael-abi-formats/: SKILL.md
.claude/zireael-build-test-ci/: SKILL.md
.claude/zireael-code-style/: SKILL.md
.claude/zireael-error-contracts/: SKILL.md
.claude/zireael-header-layering/: SKILL.md
.claude/zireael-rendering-diff/: SKILL.md
.claude/zireael-spec-guardian/: SKILL.md
.claude/zireael-unicode-text/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: 00_INDEX.md  ABI_REFERENCE.md  BUILD_TOOLCHAINS_AND_CMAKE.md  CODE_STANDARDS.md  EPIC_PLAN.md  ERROR_CODES_CATALOG.md  FFI_REFERENCE.md  GOLDEN_FIXTURE_FORMAT.md  HEADER_LAYERING.md  HEADER_SKELETON_PLAN.md  LIBC_POLICY.md  REPO_LAYOUT.md  SAFETY_RULESET.md  VERSION_PINS.md  api.md  glossary.md  index.md  maintainers.md  release-model.md  terminal-correctness-audit.md
docs-user/: contributing.md  index.md  security.md
docs-user/abi/: config.md  drawlist-v1.md  event-batch-v1.md  metrics.md  overview.md
docs-user/api/: c-api.md  headers.md  overview.md
docs-user/concepts/: determinism.md  engine-model.md  errors.md  ownership.md
docs-user/getting-started/: build-and-test.md  cmake-integration.md  examples.md  minimal-example.md  testing.md
docs-user/modules/: config-and-versioning.md  diagnostics-overlay.md  (+6 more)
examples/: example.c  input_echo.c  minimal_render_loop.c  resize_redraw.c  zr_example_common.h
scripts/: check_release_tag.py  check_version_pins.py  clang_format_check.sh  clang_tidy.sh  docs.sh  guardrails.sh  poc-go-codex-tui.ps1  poc-go-codex-tui.sh  run_clang_tidy.py  vsdev.ps1
tests/: CMakeLists.txt  zr_test.c  zr_test.h  zr_tests_main.c
tests/fuzz/: fuzz_drawlist_parser.c  fuzz_grapheme_iter.c  fuzz_input_parser.c  fuzz_utf8_decode.c  libfuzzer_drawlist_parser.c  libfuzzer_grapheme_iter.c  libfuzzer_input_parser.c  libfuzzer_utf8_decode.c  zr_fuzz_config.h  zr_fuzz_smoke.c
tests/golden/: golden_blit_subcell.c  golden_detect_parser.c  golden_diff_renderer.c  golden_image_protocols.c  golden_runner_smoke.c  zr_golden.c  zr_golden.h
tests/golden/fixtures/blit_braille_001_dot1/: case.txt  expected.hex.txt
tests/golden/fixtures/blit_drawlist_canvas_001_ascii/: case.txt  expected.hex.txt
tests/golden/fixtures/blit_halfblock_001_upper_half/: case.txt  expected.hex.txt
tests/golden/fixtures/blit_quadrant_001_checkerboard/: case.txt  expected.hex.txt
tests/golden/fixtures/blit_sextant_001_left_column/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_001_min_text_origin/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_002_style_change_single_glyph/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_003_wide_glyph_lead_only/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_004_scroll_region_scroll_up_fullscreen/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_005_cursor_show_shape_move/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_006_cursor_hide_only/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_007_sparse_single_cell_midline/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_008_screen_invalid_blank_baseline/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_009_eol_shrink_clears_trailing_cells/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_010_wide_glyph_removal_clears_pair/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_011_attr_clear_forces_absolute_sgr/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_012_mixed_underline_styles/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_013_colored_underline_transitions/: case.txt  expected.hex.txt
tests/golden/fixtures/diff_014_hyperlink_span_transitions/: case.txt  expected.hex.txt
tests/golden/fixtures/image_iterm2_png_small/: case.txt  expected.hex.txt
tests/golden/fixtures/image_iterm2_rgba_1x1/: case.txt  expected.hex.txt
tests/golden/fixtures/image_kitty_delete_7/: case.txt  expected.hex.txt
tests/golden/fixtures/image_kitty_place_2_3/: case.txt  expected.hex.txt
tests/golden/fixtures/image_kitty_transmit_rgba_1x1/: case.txt  expected.hex.txt
tests/golden/fixtures/image_sixel_rgba_1x1_red/: case.txt  expected.hex.txt
tests/golden/fixtures/zr_bytes_smoke_00/: case.txt  expected.hex.txt
tests/integration/: posix_caps_overrides.c  posix_create_fd_leak.c  posix_engine_post_user_event.c  posix_pty_rawmode.c  posix_pty_wake.c  win32_caps_overrides.c  win32_conpty_engine_post_user_event.c  win32_conpty_rawmode.c  win32_conpty_wake.c  zr_integration_smoke.c
tests/perf/: blit_bench.c  diff_hotpath_bench.c  image_encode_bench.c
tests/unit/: mock_platform.c  mock_platform.h  test_arena.c  test_base64.c  test_blit.c  test_blit_ascii.c  test_blit_braille.c  test_blit_color.c  test_blit_halfblock.c  test_blit_quadrant.c  test_blit_sampling.c  test_blit_selector.c  test_blit_sextant.c  test_bytes.c  test_cell_invariants.c  test_checked.c  test_clipping.c  test_damage_rects.c  test_debug_trace.c  test_detect_overrides.c  test_detect_parser.c  test_detect_profile.c  test_diff_color_quant.c  test_diff_extended_styles.c  test_diff_hotpath_telemetry.c  test_diff_spans.c  test_diff_term_state_validity.c  test_drawlist_blit_rect.c  test_drawlist_canvas.c  test_drawlist_execute.c  test_drawlist_image.c  test_drawlist_validate.c  test_engine_canvas_auto_selection.c  test_engine_get_caps.c  test_engine_input_sequences.c  test_engine_metrics_damage.c  test_engine_poll_events_truncation.c  test_engine_present_backpressure.c  test_engine_present_damage_resync_hyperlinks.c  test_engine_present_single_flush.c  (+35 more)
(+188 files in other folders)
